--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,7 +10,10 @@
  
      <span class="bar">
           <a href="/opportunities">Opportunities</a> &emsp;
-          <a href="/scholarships">Scholarships</a>
+          <a href="/scholarships">Scholarships</a> &emsp;
+          <a href="/resources">Resources</a> &emsp;
+          <a href="/favorites">Favorites</a> &emsp;
+          <a href="/preferences">Preferences</a> &emsp;
      </span>
 
 {% endblock %}
