--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
      <head>
           <!-- META -->
           <meta charset="utf-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
           <title>welcome</title>
-          
+
           <!-- BOOTSTRAP & CSS -->
-          <link rel="stylesheet" href="/static/css/style.css">
           <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-               integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+               integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+               crossorigin="anonymous">
+          <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" />
      </head>
+
      <body class="landing-body">
           <div class="text-center">
                <br> <br> <br>
                <span class="landing-title">Caerus</span> <br>
                <span class="landing-subtitle">All your opportunities, in one place.</span> <br> <br>
-               <button type="button" class="btn btn-lg btn-outline-light">Log in</button>
+               <button type="button" class="btn btn-lg btn-outline-light">
+                    <a href="/auth">Log in</a>
+               </button>
           </div>
      </body>
+
 </html>
