--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -24,9 +24,11 @@
           <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
                integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
                crossorigin="anonymous" defer></script>
+          
+          <script src="https://kit.fontawesome.com/0cf2afd459.js" crossorigin="anonymous"></script>
      </head>
 
-     <body class="landing-body">
+     <body class="landing-body h-100 d-flex">
           {% with messages = get_flashed_messages(with_categories=true) %}
           {% if messages %}
           {% for category, message in messages %}
@@ -44,13 +46,13 @@
           {% endfor %}
           {% endif %}
           {% endwith %}
-          <div class="text-center">
-               <br> <br> <br>
-               <span class="landing-title">Caerus</span> <br>
-               <span class="landing-subtitle">All your opportunities, in one place.</span> <br> <br>
-               <button type="button" class="btn btn-lg btn-outline-light">
-                    <a href="/auth">Log in</a>
-               </button>
+          <div class="justify-content-center align-self-center mx-auto">
+               <br> <br>
+               <div class="text-center">
+                    <span class="landing-title">Caerus</span> <br>
+                    <span class="landing-subtitle">All your opportunities, in one place.</span> <br> <br>
+                    <a class="btn btn-lg btn-outline-light" href="/auth"> <i class="fab fa-google"></i> &ensp; Log in</a>
+               </div>
           </div>
      </body>
 
