--- a/app/templates/template.html
+++ b/app/templates/template.html
@@ -17,6 +17,7 @@
           <!-- SCRIPTS -->
           {% block scripts %}
           {% endblock %}
+          <script src="https://kit.fontawesome.com/0cf2afd459.js" crossorigin="anonymous"></script>
      </head>
 
      <body>
