--- a/app/templates/opportunities.html
+++ b/app/templates/opportunities.html
@@ -9,7 +9,7 @@
      <hr>
  
      <span class="bar">
-          <a href="/opportunities">Opportunities</a> &emsp;
+          <a class="bar-here" href="/opportunities">Opportunities</a> &emsp;
           <a href="/scholarships">Scholarships</a> &emsp;
           <a href="/resources">Resources</a> &emsp;
           <a href="/favorites">Favorites</a> &emsp;
