--- a/app/templates/opportunities.html
+++ b/app/templates/opportunities.html
@@ -3,8 +3,20 @@
 {% block title %}caerus{% endblock %}
 
 {% block heading %}
-     <h1 class="title">Caerus</h1>
-     <h1 class="subtitle">All your opportunities, in one place.</h1>
+     <div class="row w-100">
+          <div class="col-9">
+               <span class="title">Caerus</span>
+               <br> <span class="subtitle">All your opportunities, in one place.</span>
+          </div>
+          <div class="col-3 mt-auto" style="padding-right: 0;">
+               <span class="float-right" style="padding: 0; margin: 0;">
+                    <b>{{ user.name }}</b> &emsp; 
+                    <img style="border-radius: 50%; height: 10vh; width: auto;" src="{{ user.imglink }}">
+               </span>
+          </div>
+     </div>
+     
+      
 
      <hr>
  
