--- a/app/templates/template.html
+++ b/app/templates/template.html
@@ -18,12 +18,14 @@
           {% block scripts %}
           {% endblock %}
           <script src="https://kit.fontawesome.com/0cf2afd459.js" crossorigin="anonymous"></script>
+          <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+          <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
      </head>
 
      <body>
           {% block heading %}
           {% endblock %}
-          
+
           {% block body %}
           {% endblock %}
      </body>
