--- a/app/templates/opportunities.html
+++ b/app/templates/opportunities.html
@@ -58,32 +58,33 @@
     <div class="row">
       <div class="col-sm">
     <form action="" method="post">
-      <b> TYPE </b> <br>
+      <b> FIELD </b> <br>
       <input type="checkbox" name="ACADEMIC" value="ACADEMIC">
-      <label for="type1"> ACADEMIC PROGRAMS </label><br>
+      <label for="field1"> ACADEMIC PROGRAMS </label><br>
       <input type="checkbox" name="BUSINESS" value="BUSINESS">
-      <label for="type2"> BUSINESS & JOBS </label><br>
+      <label for="field2"> BUSINESS & JOBS </label><br>
       <input type="checkbox" name="COMMUNITY" value="COMMUNITY">
-      <label for="type3"> COMMUNITY SERVICE </label><br>
+      <label for="field3"> COMMUNITY SERVICE </label><br>
       <input type="checkbox" name="GOVT" value="GOVT">
-      <label for="type4"> LEADERSHIP, GOVT, LAW, & ADVOCACY </label><br>
+      <label for="field4"> GOVT & LAW </label><br>
+      <input type="checkbox" name="LEADERSHIP" value="LEADERSHIP">
+      <label for="field5"> LEADERSHIP & ADVOCACY </label><br>
       <input type="checkbox" name="MUSEUMS" value="MUSEUMS">
-      <label for="type5"> MUSEUMS & ART </label><br>
+      <label for="field6"> MUSEUMS & ART </label><br>
       <input type="checkbox" name="NATURE" value="NATURE">
-      <label for="type6"> PARKS, ZOOS, & NATURE </label><br>
+      <label for="field7"> PARKS, ZOOS, & NATURE </label><br>
       <input type="checkbox" name="ENGINEERING" value="ENGINEERING">
-      <label for="type8"> ENGINEERING, MATH, & CS </label><br>
+      <label for="field8"> ENGINEERING, MATH, & CS </label><br>
       <input type="checkbox" name="MEDICAL" value="MEDICAL">
-      <label for="type9"> MEDICAL & LIFE SCIENCES</label><br>
+      <label for="field9"> MEDICAL & LIFE SCIENCES</label><br>
       <input type="checkbox" name="ARTS" value="ARTS">
-      <label for="type10"> LITERATURE</label><br>
+      <label for="field10"> LITERATURE</label><br>
       <input type="checkbox" name="THEATRE" value="THEATRE">
-      <label for="type10"> PERFORMING ARTS</label><br>
+      <label for="field11"> PERFORMING ARTS</label><br>
       <input type="checkbox" name="VISUAL" value="VISUAL">
-      <label for="type10"> VISUAL ARTS</label><br>
+      <label for="field12"> VISUAL ARTS</label><br>
       <input type="checkbox" name="MEDICAL" value="MEDICAL">
-      <label for="type10"> MEDICAL & LIFE SCIENCES</label><br>
-
+      <label for="field13"> MEDICAL & LIFE SCIENCES</label><br>
     </div>
 
     <div class="col-sm">
@@ -92,7 +93,31 @@
         <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
       </div>
 
+      <br>
+
+      <b> GRADE </b> <br>
+      <input type="checkbox" name="FROSH" value="FROSH">
+      <label for="grade1"> FRESHMAN </label><br>
+      <input type="checkbox" name="SOPH" value="SOPH">
+      <label for="grade2"> SOPHOMORE </label><br>
+      <input type="checkbox" name="JUNIOR" value="JUNIOR">
+      <label for="grade3"> JUNIOR </label><br>
+      <input type="checkbox" name="SENIOR" value="SENIOR">
+      <label for="grade4"> SENIOR </label><br>
+
+      <br>
+
+      <b> GENDER </b> <br>
+      <input type="checkbox" name="CO-ED" value="CO-ED">
+      <label for="grade1"> CO-ED </label><br>
+      <input type="checkbox" name="FEMALE" value="FEMALE">
+      <label for="grade2"> FEMALE </label><br>
+
   </div>
+
+</div>
+
+</div>
 </div>
 
 {% endblock %}
