--- a/app/templates/opportunities.html
+++ b/app/templates/opportunities.html
@@ -85,11 +85,12 @@
       <label for="field12"> VISUAL ARTS</label><br>
       <input type="checkbox" name="MEDICAL" value="MEDICAL">
       <label for="field13"> MEDICAL & LIFE SCIENCES</label><br>
+
     </div>
 
     <div class="col-sm">
       <div class="slidecontainer">
-        <p><b> PRICE <span id="demo"></span></b></p>
+        <b> PRICE <span id="demo"></span></b>
         <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
       </div>
 
@@ -113,6 +114,10 @@
       <input type="checkbox" name="FEMALE" value="FEMALE">
       <label for="grade2"> FEMALE </label><br>
 
+      <br>
+
+      <input type="submit" value="Show Results">
+      </form>
   </div>
 
 </div>
