--- a/app/templates/opportunities.html
+++ b/app/templates/opportunities.html
@@ -43,6 +43,20 @@
       </button>
     </div>
     <div class="col-sm">
+      <div class="form-group">
+        <select class="form-control" id="sort">
+          <option type="hidden"> Select a Sort </option>
+          <option> Date Created (↑)</option>
+          <option> Date Created (↓)</option>
+          <option> Deadline (↑)</option>
+          <option> Deadline (↓)</option>
+          <option> Price (↑)</option>
+          <option> Price (↓)</option>
+        </select>
+      </div>
+
+    </div>
+    <div class="col-sm">
       <form class="form-inline">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
@@ -55,9 +69,9 @@
 
 <div class="collapse" id="collapseExample">
   <div class="card card-body">
+    <form action="" method="post">
     <div class="row">
       <div class="col-sm">
-    <form action="" method="post">
       <b> FIELD </b> <br>
       <input type="checkbox" name="ACADEMIC" value="ACADEMIC">
       <label for="field1"> ACADEMIC PROGRAMS </label><br>
@@ -89,9 +103,23 @@
     </div>
 
     <div class="col-sm">
-      <div class="slidecontainer">
-        <b> PRICE <span id="demo"></span></b>
-        <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+
+      <label for="minPrice"><b> MINIMUM PRICE </b> </label> <br>
+      <div class="input-group">
+      <div class="input-group-prepend">
+      <div class="input-group-text" id="btnGroupAddon">$</div>
+      </div>
+      <input type="text" class="form-control" id="minPrice" aria-describedby="" placeholder="Enter price">
+      </div>
+
+      <br>
+
+      <label for="maxPrice"><b> MAXIMUM PRICE </b> </label> <br>
+      <div class="input-group">
+      <div class="input-group-prepend">
+      <div class="input-group-text" id="btnGroupAddon">$</div>
+      </div>
+      <input type="text" class="form-control" id="maxPrice" aria-describedby="" placeholder="Enter price">
       </div>
 
       <br>
@@ -115,8 +143,9 @@
       <label for="grade2"> FEMALE </label><br>
 
       <br>
-
+      <div class="text-right">
       <input type="submit" value="Show Results">
+      </div>
       </form>
   </div>
 
