id and value added as per kazi's request

--- a/app/templates/opportunities.html
+++ b/app/templates/opportunities.html
@@ -46,12 +46,12 @@
       <div class="form-group">
         <select class="form-control" id="sort">
           <option type="hidden"> Select a Sort </option>
-          <option> Date Created (↑)</option>
-          <option> Date Created (↓)</option>
-          <option> Deadline (↑)</option>
-          <option> Deadline (↓)</option>
-          <option> Price (↑)</option>
-          <option> Price (↓)</option>
+          <option value="dateposted-asc" id="dateposted-asc" > Date Created (↑)</option>
+          <option value="dateposted-desc" id="dateposted-desc" >Date Created (↓)</option>
+          <option value="deadline-asc" id="deadline-asc" > Deadline (↑)</option>
+          <option value="deadline-desc" id="deadline-desc" > Deadline (↓)</option>
+          <option value="cost-asc" id="cost-asc" > Price (↑)</option>
+          <option value="cost-desc" id="cost-desc" > Price (↓)</option>
         </select>
       </div>
 
