--- a/app/templates/opportunities.html
+++ b/app/templates/opportunities.html
@@ -44,7 +44,7 @@
     </div>
     <div class="col-sm">
       <div class="form-group">
-        <select class="form-control" id="sort">
+        <select class="form-control" method="post" id="sort">
           <option type="hidden"> Select a Sort </option>
           <option value="dateposted-asc" id="dateposted-asc" > Date Created (↑)</option>
           <option value="dateposted-desc" id="dateposted-desc" >Date Created (↓)</option>
