Add Jinja templating

--- a/app/templates/individual.html
+++ b/app/templates/individual.html
@@ -2,28 +2,29 @@
 
 {% block title %}TITLE GOES HERE{% endblock %}
 
-{% block heading %} 
-     <h1 class="title">TITLE GOES HERE</h1>
+{% block heading %}
+<h1 class="title">TITLE GOES HERE</h1>
 
-     <!-- tags -->
-     <div class="tag-block">
-          <!-- field, gender, cost, etc. -->
-          <a class="btn btn-primary btn-sm" href="/opportunities">&nbsp; #freshman &nbsp;</a> &nbsp;
-          <a class="btn btn-primary btn-sm" href="/opportunities">&nbsp; #sophomore &nbsp;</a> &nbsp;
-          <a class="btn btn-primary btn-sm" href="/opportunities">&nbsp; #junior &nbsp;</a> &nbsp;
-          <a class="btn btn-primary btn-sm" href="/opportunities">&nbsp; #senior &nbsp;</a> &nbsp;
-          <a class="btn btn-primary btn-sm" href="/opportunities">&nbsp; #STEM &nbsp;</a> &nbsp;
-          <a class="btn btn-primary btn-sm" href="/opportunities">&nbsp; #free &nbsp;</a> &nbsp;
-          <a class="btn btn-primary btn-sm" href="/opportunities">&nbsp; #female-only &nbsp;</a> &nbsp;
-     </div>
+<!-- tags -->
+<div class="tag-block">
+     <!-- field, gender, cost, etc. -->
+     <a class="btn btn-primary btn-sm" href="/opportunities">&nbsp; #freshman &nbsp;</a> &nbsp;
+     <a class="btn btn-primary btn-sm" href="/opportunities">&nbsp; #sophomore &nbsp;</a> &nbsp;
+     <a class="btn btn-primary btn-sm" href="/opportunities">&nbsp; #junior &nbsp;</a> &nbsp;
+     <a class="btn btn-primary btn-sm" href="/opportunities">&nbsp; #senior &nbsp;</a> &nbsp;
+     <a class="btn btn-primary btn-sm" href="/opportunities">&nbsp; #STEM &nbsp;</a> &nbsp;
+     <a class="btn btn-primary btn-sm" href="/opportunities">&nbsp; #free &nbsp;</a> &nbsp;
+     <a class="btn btn-primary btn-sm" href="/opportunities">&nbsp; #female-only &nbsp;</a> &nbsp;
+</div>
 
-     <br>
+<br>
 
-     <!-- description & info -->
-     <h3 class="subtitle">startdate - enddate</h3>
-     <h3 class="subtitle"><b>DEADLINE</b></h3> <br>
+<!-- description & info -->
+<h3 class="subtitle">startdate - enddate</h3>
+<h3 class="subtitle"><b>DEADLINE</b></h3> <br>
 
-     <p>description lorem ipsum description lorem ipsum description lorem ipsum description lorem ipsum description lorem ipsum description lorem ipsum</p>
+<p>description lorem ipsum description lorem ipsum description lorem ipsum description lorem ipsum description lorem
+     ipsum description lorem ipsum</p>
 
 {% endblock %}
 
@@ -32,7 +33,7 @@
 title: String
 description : Text
 field: String
-gender: String or NULL 
+gender: String or NULL
 location: String or NULL
 startDate: DateTime or NULL
 endDate: DateTime or NULL
