--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -6,7 +6,7 @@
           <meta charset="utf-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-          <title>welcome</title>
+          <title>Caerus</title>
 
           <!-- BOOTSTRAP & CSS -->
           <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -24,7 +24,7 @@
           <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
                integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
                crossorigin="anonymous" defer></script>
-          
+
           <script src="https://kit.fontawesome.com/0cf2afd459.js" crossorigin="anonymous"></script>
      </head>
 
