--- a/app/templates/favorites.html
+++ b/app/templates/favorites.html
@@ -1,19 +1,10 @@
 {% extends "template.html" %}
 
-{% block title %}caerus{% endblock %}
+{% set active_page = active_page|default('favorites') -%}
+
+{% block title %}Favorites{% endblock %}
 
 {% block heading %}
-<h1 class="title">Caerus</h1>
-<h1 class="subtitle">All your opportunities, in one place.</h1>
-
-<hr>
-
-<span class="bar">
-     <a href="/opportunities">Opportunities</a> &emsp;
-     <a href="/scholarships">Scholarships</a> &emsp;
-     <a href="/resources">Resources</a> &emsp;
-     <a class="bar-here" href="/favorites">Favorites</a> &emsp;
-     <a href="/preferences">Preferences</a> &emsp;
-</span>
+{{super()}}
 
 {% endblock %}
