Fix database retrieval functions

--- a/app/templates/scholarships.html
+++ b/app/templates/scholarships.html
@@ -35,3 +35,9 @@
 <br>
 
 {% endblock %}
+
+{% block body %}
+{% for scholarship in scholars %}
+{{scholarship.title}}
+{% endfor %}
+{% endblock %}
