--- a/app/templates/opportunities.html
+++ b/app/templates/opportunities.html
@@ -73,7 +73,7 @@
 
         <div class="col-sm">
 
-          <label for="minPrice"><b> MINIMUM PRICE </b> </label> <br>
+          <!-- <label for="minPrice"><b> MINIMUM PRICE </b> </label> <br>
           <div class="input-group">
             <div class="input-group-prepend">
               <div class="input-group-text" id="btnGroupAddon">$</div>
@@ -81,7 +81,7 @@
             <input type="text" class="form-control" id="minPrice" aria-describedby="" placeholder="Enter price">
           </div>
 
-          <br>
+          <br> -->
 
           <label for="maxPrice"><b> MAXIMUM PRICE </b> </label> <br>
           <div class="input-group">
