profile pic, display width fixed

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,7 +1,14 @@
 /* regular/template CSS */
 
+* {
+     margin: 0;
+     padding: 0;
+}
+
 body {
      padding: 5%;
+     max-width: 1440px;
+     margin: auto;
 }
 
 .title {
