--- a/app/templates/template.html
+++ b/app/templates/template.html
@@ -36,14 +36,14 @@
      <body>
           {% block heading %}
           <div class="row w-100">
-               <div class="col-9">
+               <div class="col-8">
                     <span class="title">Caerus</span>
                     <br> <span class="subtitle">All your opportunities, in one place.</span>
                </div>
-               <div class="col-3 mt-auto" style="padding-right: 0;">
+               <div class="col-4 mt-auto" style="padding-right: 0;">
                     <span class="float-right" style="padding: 0; margin: 0;">
                          <b>{{ user.name }}</b> &emsp;
-                         <img style="border-radius: 50%; height: 10vh; width: auto;" src="{{ user.imglink }}">
+                         <img style="border-radius: 50%; height: 5vw; width: auto;" src="{{ user.imglink }}">
                     </span>
                </div>
           </div>
