--- a/app/templates/template.html
+++ b/app/templates/template.html
@@ -35,6 +35,23 @@
 
      <body>
           {% block heading %}
+          {% with messages = get_flashed_messages(with_categories=true) %}
+          {% if messages %}
+          {% for category, message in messages %}
+          {% if category == "error" %}
+          <div class="alert alert-danger text-align-center alert-dismissible fade show" role="alert">
+          {% endif %}
+               {% if category == "success" %}
+               <div class="alert alert-success text-align-center alert-dismissible fade show" role="alert">
+               {% endif %}
+                    {{message}}
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                         <span aria-hidden="true">&times;</span>
+                    </button>
+               </div>
+          {% endfor %}
+          {% endif %}
+          {% endwith %}
           <div class="row w-100">
                <div class="col-9">
                     <span class="title">Caerus</span>
