Add scholarship creation route

--- a/app/templates/createscholarship.html
+++ b/app/templates/createscholarship.html
@@ -27,7 +27,7 @@
 {% block title %}Create Opportunity{% endblock %}
 
 {% block body %}
-<a tabindex="-1" href="/opportunities">GO BACK</a>
+<a tabindex="-1" href="/scholarships">GO BACK</a>
 <br>
 <form action="/opportunities/create" method="POST">
     <div class="form-group">
